kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voyage-backend
  namespace: voyage-ns
  labels:
    app: voyage-backend
spec:
  selector:
    matchLabels:
      app: voyage-backend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: voyage-backend
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: voyage-backend
        image: bhargavpateldevops/voyage-backend:v1
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 5000
          name: voyage-backend
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          periodSeconds: 10
      restartPolicy: Always
