kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voyage-backend-service
  namespace: voyage-ns
spec:
  selector:
    app: voyage-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
