kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voyage-frontend
  namespace: voyage-ns
  labels:
    app: voyage-frontend
spec:
  selector:
    matchLabels:
      app: voyage-frontend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: voyage-frontend
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: voyage-frontend
        image: voyage-frontend:v1.2
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 80
          name: voyage-frontend
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          periodSeconds: 10
      #   env:
      #   - name: DB_HOST
      #     valueFrom:
      #       configMapKeyRef:
      #         name: voyage-frontend
      #         key: DB_HOST
      #   ports:
      #   - containerPort:  80
      #     name:  voyage-frontend
      #   volumeMounts:
      #   - name: localtime
      #     mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: voyage-frontend-service
  namespace: voyage-ns
spec:
  selector:
    app: voyage-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
  externalTrafficPolicy: Cluster
