kubernetes/mysql-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deployment
  namespace: voyage-ns
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-init-scripts
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: mysql-init-scripts
        configMap:
          name: mysql-init-scripts
          items:
          - key: init.sql
            path: init.sql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: voyage-ns
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
